--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
   "license": "MIT",
   "main": "src/index.js",
   "scripts": {
-    "build": "cross-env NODE_ENV=production webpack --config webpack.config.prod.js",
-    "dev": "cross-env NODE_ENV=development webpack --config webpack.config.dev.js --watch",
-    "dev:server": "cross-env NODE_ENV=development webpack-dev-server --config webpack.config.dev.js --watch",
-    "start": "npm run dev:server"
+    "webpack": "webpack"
   },
   "dependencies": {
     "@babel/runtime": "^7.11.2"
@@ -19,22 +16,13 @@
     "@babel/plugin-transform-regenerator": "^7.10.4",
     "@babel/plugin-transform-runtime": "^7.11.0",
     "@babel/preset-env": "^7.11.0",
-    "autoprefixer": "^9.8.6",
-    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
-    "bookmarklet-wrapper-webpack-plugin": "^1.0.1",
-    "cross-env": "^7.0.2",
-    "css-loader": "^4.2.2",
-    "eslint": "^7.7.0",
-    "eslint-config-prettier": "^6.11.0",
-    "node-sass": "^4.14.1",
-    "postcss-loader": "^3.0.0",
-    "postcss-preset-env": "^6.7.0",
-    "sass-loader": "^9.0.3",
-    "style-loader": "^1.2.1",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^4.2.2"
+    "clean-webpack-plugin": "^4.0.0",
+    "html-loader": "^4.2.0",
+    "html-webpack-plugin": "^5.5.0",
+    "lz-string": "^1.4.4",
+    "lzstring-loader": "^0.2.0",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   }
 }
