--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "html-webpack-plugin": "^5.5.0",
     "lz-string": "^1.4.4",
     "lzstring-loader": "^0.2.0",
+    "uglify-js": "^3.17.4",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
   }
